Fixed page shift due to scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,6 @@ nav {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   row-gap: 1rem;
 }
 
